# pubmedqa-claim-safety-audit

./: .gitignore  CITATION.cff  README.md  SHA256.txt  eval_pubmedqa.py  prepare_biomed.py  pyproject.toml  results_biomed.tsv  results_locked_replicates.tsv  results_repeated_controls.tsv  run_config_replicates.py  train_biomed.py
analysis/: audit_proxy_metric_mismatch.py  audit_reference_baselines.py  build_bmc_v4_lean_supplement.py  build_manuscript_tables.py  build_run_registry.py  calibration_sanity_check.py  context_use_sanity_check.py  full_pairwise_validation_audit.py  model_panel_audit.py  plot_calibration_sanity.py  plot_context_use_sanity.py  plot_full_pairwise_forest.py  plot_hypothesis_first_workflow.py  plot_model_panel_audit.py  plot_proxy_metric_mismatch.py  plot_same_trained_context_ablation.py  run_same_trained_context_ablation.py  summarize_prospective_mini_run.py  summarize_pubmedqa_predictions.py  summarize_same_trained_context_ablation.py
baselines/: frozen_biomedbert.py  tfidf_scifact.py
docs/: bmc_midm_manuscript_submission_clean_20260508.md  deprecated_locked_replicates_notice.md  prospective_mini_run_provenance_20260506.md  same_trained_context_ablation_20260508.md  test_split_freeze_notice.md
outputs/: biomedbert_pubmedqa_metrics.tsv  biomedbert_pubmedqa_predictions.tsv  biomedbert_scifact_metrics.tsv  biomedbert_scifact_predictions.tsv  repeated_controls_correlations.tsv  repeated_controls_summary.tsv  run_registry.tsv  tfidf_pubmedqa_metrics.tsv  tfidf_pubmedqa_prediction_audit.tsv  tfidf_pubmedqa_predictions.tsv  tfidf_scifact_metrics.tsv  (+1 more)
(+209 files in other folders)
